:bug: fix horizontal scroll on mobile

--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -1,10 +1,13 @@
 .screen {
-  width: 100%;
-  height: 100vh;
-  background-color: var(--color-green);
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: var(--color-green);
+  overflow: hidden;
   z-index: 100;
   display: flex;
   justify-content: center;
@@ -25,7 +28,6 @@
   display: flex;
   justify-content: space-between;
   padding-top: 80px;
-  opacity: 0;
 
   @include media('<desktop') {
     flex-direction: column;
@@ -45,6 +47,7 @@
   &--menu {
     display: flex;
     flex-direction: column;
+    padding: 0 10px;
 
     @include media('<desktop') {
       flex-direction: row;
